--- a/HTML/Products.html
+++ b/HTML/Products.html
@@ -41,7 +41,7 @@
   </head>
   <body>
     <header>
-      <a href="Index.html" style="text-decoration: none; color: inherit">
+      <a href="../Index.html" style="text-decoration: none; color: inherit">
         <div class="logo">SAMS</div>
       </a>
       <nav>
