--- a/Index.html
+++ b/Index.html
@@ -40,11 +40,11 @@
         <div class="logo">SAMS</div>
       </a>
       <nav>
-        <a href="./Products.html">Products</a>
-        <a href="./CustomerStories.html">Customer Stories</a>
-        <a href="./Partners.html">Partners</a>
-        <a href="./OurTeam.html">Our Team</a>
-        <a href="./ContactUs.html">Contact us</a>
+        <a href="/HTML/Products.html">Products</a>
+        <a href="/HTML/CustomerStories.html">Customer Stories</a>
+        <a href="/HTML/Partners.html">Partners</a>
+        <a href="/HTML/OurTeam.html">Our Team</a>
+        <a href="/HTML/ContactUs.html">Contact us</a>
       </nav>
       <div class="icons">
         <span><img src="/Images/Search.png" width="20px" alt="Search" /></span>
