--- a/Index.html
+++ b/Index.html
@@ -29,10 +29,10 @@
     <!-- Font Awesome Library -->
     <link rel="stylesheet" href="../CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="/Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./Bootstrap v5.0/css/bootstrap.min.css" />
     <title>Visioneers - SAMS</title>
-    <link rel="icon" href="/Images/Logo.png" type="image/icon type" />
-    <link rel="stylesheet" href="/CSS/Master.css" />
+    <link rel="icon" href="./Images/Logo.png" type="image/icon type" />
+    <link rel="stylesheet" href="./CSS/Master.css" />
   </head>
   <body>
     <header>
@@ -47,8 +47,8 @@
         <a href="/HTML/ContactUs.html">Contact us</a>
       </nav>
       <div class="icons">
-        <span><img src="/Images/Search.png" width="20px" alt="Search" /></span>
-        <span><img src="/Images/World.png" width="20px" alt="language" /></span>
+        <span><img src="./Images/Search.png" width="20px" alt="Search" /></span>
+        <span><img src="./Images/World.png" width="20px" alt="language" /></span>
       </div>
     </header>
     <div class="Container">
@@ -61,7 +61,7 @@
           </p>
           <button>Get A Demo</button>
         </div>
-        <img src="/Images/Classroom.jpg" alt="Classroom security" />
+        <img src="./Images/Classroom.jpg" alt="Classroom security" />
       </section>
 
       <section class="stats">
@@ -77,7 +77,7 @@
       </section>
 
       <section class="whats-new-Card">
-        <img src="/Images/Camera.jpeg" alt="Security Camera" />
+        <img src="./Images/Camera.jpeg" alt="Security Camera" />
         <div class="text-content">
           <h2>Flexible, AI-Powered Software</h2>
           <p>
