--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       rel="stylesheet"
     />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="../CSS/all.min.css" />
+    <link rel="stylesheet" href="./CSS/all.min.css" />
     <!-- Booststrap -->
     <link rel="stylesheet" href="./Bootstrap v5.0/css/bootstrap.min.css" />
     <title>Visioneers - SAMS</title>
@@ -40,11 +40,11 @@
         <div class="logo">SAMS</div>
       </a>
       <nav>
-        <a href="/HTML/Products.html">Products</a>
-        <a href="/HTML/CustomerStories.html">Customer Stories</a>
-        <a href="/HTML/Partners.html">Partners</a>
-        <a href="/HTML/OurTeam.html">Our Team</a>
-        <a href="/HTML/ContactUs.html">Contact us</a>
+        <a href="./HTML/Products.html">Products</a>
+        <a href="./HTML/CustomerStories.html">Customer Stories</a>
+        <a href="./HTML/Partners.html">Partners</a>
+        <a href="./HTML/OurTeam.html">Our Team</a>
+        <a href="./HTML/ContactUs.html">Contact us</a>
       </nav>
       <div class="icons">
         <span><img src="./Images/Search.png" width="20px" alt="Search" /></span>
