--- a/HTML/Products.html
+++ b/HTML/Products.html
@@ -33,7 +33,7 @@
     <!-- Font Awesome Library -->
     <link rel="stylesheet" href="../CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="/Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../Bootstrap v5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../CSS/Master.css" />
     <link rel="stylesheet" href="../CSS/Products.css" />
     <link rel="icon" href="../Images/Logo.png" type="image/icon type" />
