--- a/HTML/ContactUs.html
+++ b/HTML/ContactUs.html
@@ -29,7 +29,7 @@
     <!-- Font Awesome Library -->
     <link rel="stylesheet" href="../CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="/Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../Bootstrap v5.0/css/bootstrap.min.css" />
     <!-- Leaflet CSS -->
     <link
       rel="stylesheet"
@@ -38,9 +38,9 @@
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <!-- Stylesheets -->
-    <link rel="icon" href="/Images/Logo.png" type="image/icon type" />
-    <link rel="stylesheet" href="/CSS/Master.css" />
-    <link rel="stylesheet" href="/CSS/ContactUs.css" />
+    <link rel="icon" href="../Images/Logo.png" type="image/icon type" />
+    <link rel="stylesheet" href="../CSS/Master.css" />
+    <link rel="stylesheet" href="../CSS/ContactUs.css" />
     <title>SAMS Contact Us</title>
   </head>
   <body>
@@ -56,8 +56,8 @@
         <a href="./ContactUs.html">Contact us</a>
       </nav>
       <div class="icons">
-        <span><img src="/Images/Search.png" width="20px" alt="Search" /></span>
-        <span><img src="/Images/World.png" width="20px" alt="language" /></span>
+        <span><img src="../Images/Search.png" width="20px" alt="Search" /></span>
+        <span><img src="../Images/World.png" width="20px" alt="language" /></span>
       </div>
     </header>
     <div class="container">
@@ -129,7 +129,7 @@
         </details>
       </div>
     </div>
-    <script src="/Javascript/ContactUs.js"></script>
+    <script src="../Javascript/ContactUs.js"></script>
   </body>
   <footer>
     <div class="footer-content">
