--- a/HTML/CustomerStories.html
+++ b/HTML/CustomerStories.html
@@ -33,10 +33,10 @@
     <!-- Font Awesome Library -->
     <link rel="stylesheet" href="../CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="/Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../Bootstrap v5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../CSS/Master.css" />
     <link rel="stylesheet" href="../CSS/CustomerStories.css" />
-    <link rel="icon" href="/Images/Logo.png" type="image/icon type" />
+    <link rel="icon" href="../Images/Logo.png" type="image/icon type" />
     <title>SAMS - Customer Stories</title>
   </head>
   <body>
@@ -52,8 +52,8 @@
         <a href="./ContactUs.html">Contact us</a>
       </nav>
       <div class="icons">
-        <span><img src="/Images/Search.png" width="20px" alt="Search" /></span>
-        <span><img src="/Images/World.png" width="20px" alt="language" /></span>
+        <span><img src="../Images/Search.png" width="20px" alt="Search" /></span>
+        <span><img src="../Images/World.png" width="20px" alt="language" /></span>
       </div>
     </header>
     <div class="stories-container">
