--- a/HTML/OurTeam.html
+++ b/HTML/OurTeam.html
@@ -29,11 +29,11 @@
     <!-- Font Awesome Library -->
     <link rel="stylesheet" href="../CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="/Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../Bootstrap v5.0/css/bootstrap.min.css" />
     <!-- Stylesheets -->
-    <link rel="icon" href="/Images/Logo.png" type="image/icon type" />
-    <link rel="stylesheet" href="/CSS/Master.css" />
-    <link rel="stylesheet" href="/CSS/OurTeam.css" />
+    <link rel="icon" href="../Images/Logo.png" type="image/icon type" />
+    <link rel="stylesheet" href="../CSS/Master.css" />
+    <link rel="stylesheet" href="../CSS/OurTeam.css" />
     <title>SAMS - Contact Us</title>
   </head>
   <body>
@@ -49,8 +49,8 @@
         <a href="./ContactUs.html">Contact us</a>
       </nav>
       <div class="icons">
-        <span><img src="/Images/Search.png" width="20px" alt="Search" /></span>
-        <span><img src="/Images/World.png" width="20px" alt="language" /></span>
+        <span><img src="../Images/Search.png" width="20px" alt="Search" /></span>
+        <span><img src="../Images/World.png" width="20px" alt="language" /></span>
       </div>
     </header>
     <div class="team-container">
