Add Responsive style to pages

--- a/HTML/OurTeam.html
+++ b/HTML/OurTeam.html
@@ -38,19 +38,26 @@
   </head>
   <body>
     <header>
-      <a href="../index.html" style="text-decoration: none; color: inherit;">
-      <div class="logo">SAMS</div>
+      <a href="Index.html" style="text-decoration: none; color: inherit">
+        <div class="logo">SAMS</div>
       </a>
-      <nav>
+      <nav class="nav-links">
         <a href="./Products.html">Products</a>
         <a href="./CustomerStories.html">Customer Stories</a>
         <a href="./Partners.html">Partners</a>
         <a href="./OurTeam.html">Our Team</a>
         <a href="./ContactUs.html">Contact us</a>
       </nav>
+
       <div class="icons">
         <span><img src="/Images/Search.png" width="20px" alt="Search" /></span>
         <span><img src="/Images/World.png" width="20px" alt="language" /></span>
+      </div>
+      <!-- Mobile Menu Toggle -->
+      <div class="menu-toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
     </header>
     <div class="team-container">
@@ -64,10 +71,14 @@
         <div class="team-card">
           <img src="../Images/Ahmed Adel.jpg" alt="Ahmed Adel Mahmoud" />
           <h3>Ahmed Adel Mahmoud</h3>
-          <p class="role">Web Developer<br>Embedded Systems</p>
+          <p class="role">Web Developer<br />Embedded Systems</p>
           <div class="socials">
-            <a href="https://www.linkedin.com/in/a23hmed-adel/"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/ahmed23-m"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/a23hmed-adel/"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+            <a href="https://github.com/ahmed23-m"
+              ><i class="fab fa-github"></i
+            ></a>
           </div>
         </div>
 
@@ -76,23 +87,37 @@
           <h3>Islam Elsayed Mohamed</h3>
           <p class="role">Backend Developer</p>
           <div class="socials">
-            <a href="https://www.linkedin.com/in/islam-elsayed-2a77a6248/"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/Islam-abdelwahed"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/islam-elsayed-2a77a6248/"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+            <a href="https://github.com/Islam-abdelwahed"
+              ><i class="fab fa-github"></i
+            ></a>
           </div>
         </div>
 
         <div class="team-card">
-          <img src="../Images/shehab mohamed.jpg" alt="Shehab Mohamed Ghareeb" />
+          <img
+            src="../Images/shehab mohamed.jpg"
+            alt="Shehab Mohamed Ghareeb"
+          />
           <h3>Shehab Mohamed Ghareeb</h3>
           <p class="role">Flutter Mobile Developer</p>
           <div class="socials">
-            <a href="https://www.linkedin.com/in/shehab-mohamed-385565246/"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/shehabbebo"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/shehab-mohamed-385565246/"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+            <a href="https://github.com/shehabbebo"
+              ><i class="fab fa-github"></i
+            ></a>
           </div>
         </div>
 
         <div class="team-card">
-          <img src="../Images/yousef mostafa-cpy.jpg" alt="Yousef Mostafa Ismail" />
+          <img
+            src="../Images/yousef mostafa-cpy.jpg"
+            alt="Yousef Mostafa Ismail"
+          />
           <h3>Yousef Mostafa Ismail</h3>
           <p class="role">Flutter Mobile Developer</p>
           <div class="socials">
@@ -105,24 +130,29 @@
           <h3>Ahmed Ezzat Ibrahim</h3>
           <p class="role">ML / DL</p>
           <div class="socials">
-            <a href="https://www.linkedin.com/in/ahmed-ezzat-34305a205/"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/ahmed-ezzat99"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/ahmed-ezzat-34305a205/"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+            <a href="https://github.com/ahmed-ezzat99"
+              ><i class="fab fa-github"></i
+            ></a>
           </div>
         </div>
       </div>
     </div>
     <footer>
-    <div class="footer-content">
-      <div class="logo">SAMS</div>
-      <p class="Copy-Rights">
-        &copy; 2025 SAMS By Visioneers. All Rights Reserved.
-      </p>
-    </div>
-    <div class="social-icons">
-      <span><i class="fa-brands fa-square-facebook"></i></span>
-      <span><i class="fa-brands fa-square-twitter"></i></span>
-      <span><i class="fa-brands fa-linkedin"></i></span>
-    </div>
-  </footer>
+      <div class="footer-content">
+        <div class="logo">SAMS</div>
+        <p class="Copy-Rights">
+          &copy; 2025 SAMS By Visioneers. All Rights Reserved.
+        </p>
+      </div>
+      <div class="social-icons">
+        <span><i class="fa-brands fa-square-facebook"></i></span>
+        <span><i class="fa-brands fa-square-twitter"></i></span>
+        <span><i class="fa-brands fa-linkedin"></i></span>
+      </div>
+    </footer>
+    <script src="/Javascript/responsive.js"></script>
   </body>
 </html>
