--- a/HTML/ContactUs.html
+++ b/HTML/ContactUs.html
@@ -45,19 +45,26 @@
   </head>
   <body>
     <header>
-      <a href="../index.html" style="text-decoration: none; color: inherit;">
-      <div class="logo">SAMS</div>
+      <a href="Index.html" style="text-decoration: none; color: inherit">
+        <div class="logo">SAMS</div>
       </a>
-      <nav>
+      <nav class="nav-links">
         <a href="./Products.html">Products</a>
         <a href="./CustomerStories.html">Customer Stories</a>
         <a href="./Partners.html">Partners</a>
         <a href="./OurTeam.html">Our Team</a>
         <a href="./ContactUs.html">Contact us</a>
       </nav>
+
       <div class="icons">
         <span><img src="/Images/Search.png" width="20px" alt="Search" /></span>
         <span><img src="/Images/World.png" width="20px" alt="language" /></span>
+      </div>
+      <!-- Mobile Menu Toggle -->
+      <div class="menu-toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
     </header>
     <div class="container">
@@ -130,6 +137,7 @@
       </div>
     </div>
     <script src="/Javascript/ContactUs.js"></script>
+    <script src="/Javascript/responsive.js"></script>
   </body>
   <footer>
     <div class="footer-content">
