--- a/index.html
+++ b/index.html
@@ -27,28 +27,35 @@
       rel="stylesheet"
     />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="./CSS/all.min.css" />
+    <link rel="stylesheet" href="../CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="./Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/Bootstrap v5.0/css/bootstrap.min.css" />
     <title>Visioneers - SAMS</title>
-    <link rel="icon" href="./Images/Logo.png" type="image/icon type" />
-    <link rel="stylesheet" href="./CSS/Master.css" />
+    <link rel="icon" href="/Images/Logo.png" type="image/icon type" />
+    <link rel="stylesheet" href="/CSS/Master.css" />
   </head>
   <body>
     <header>
-      <a href="index.html" style="text-decoration: none; color: inherit">
+      <a href="Index.html" style="text-decoration: none; color: inherit">
         <div class="logo">SAMS</div>
       </a>
-      <nav>
-        <a href="./HTML/Products.html">Products</a>
-        <a href="./HTML/CustomerStories.html">Customer Stories</a>
-        <a href="./HTML/Partners.html">Partners</a>
-        <a href="./HTML/OurTeam.html">Our Team</a>
-        <a href="./HTML/ContactUs.html">Contact us</a>
+      <nav class="nav-links">
+        <a href="./Products.html">Products</a>
+        <a href="./CustomerStories.html">Customer Stories</a>
+        <a href="./Partners.html">Partners</a>
+        <a href="./OurTeam.html">Our Team</a>
+        <a href="./ContactUs.html">Contact us</a>
       </nav>
+
       <div class="icons">
-        <span><img src="./Images/Search.png" width="20px" alt="Search" /></span>
-        <span><img src="./Images/World.png" width="20px" alt="language" /></span>
+        <span><img src="/Images/Search.png" width="20px" alt="Search" /></span>
+        <span><img src="/Images/World.png" width="20px" alt="language" /></span>
+      </div>
+      <!-- Mobile Menu Toggle -->
+      <div class="menu-toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
       </div>
     </header>
     <div class="Container">
@@ -61,7 +68,7 @@
           </p>
           <button>Get A Demo</button>
         </div>
-        <img src="./Images/Classroom.jpg" alt="Classroom security" />
+        <img src="/Images/Classroom.jpg" alt="Classroom security" />
       </section>
 
       <section class="stats">
@@ -77,7 +84,7 @@
       </section>
 
       <section class="whats-new-Card">
-        <img src="./Images/Camera.jpeg" alt="Security Camera" />
+        <img src="/Images/Camera.jpeg" alt="Security Camera" />
         <div class="text-content">
           <h2>Flexible, AI-Powered Software</h2>
           <p>
@@ -151,5 +158,6 @@
       </div>
     </footer>
     <script src="/Javascript/Home.js"></script>
+    <script src="/Javascript/responsive.js"></script>
   </body>
 </html>
