--- a/HTML/ContactUs.html
+++ b/HTML/ContactUs.html
@@ -27,9 +27,9 @@
       rel="stylesheet"
     />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="../CSS/all.min.css" />
+    <link rel="stylesheet" href="/CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="../Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/Bootstrap v5.0/css/bootstrap.min.css" />
     <!-- Leaflet CSS -->
     <link
       rel="stylesheet"
@@ -38,9 +38,9 @@
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <!-- Stylesheets -->
-    <link rel="icon" href="../Images/Logo.png" type="image/icon type" />
-    <link rel="stylesheet" href="../CSS/Master.css" />
-    <link rel="stylesheet" href="../CSS/ContactUs.css" />
+    <link rel="icon" href="/Images/Logo.png" type="image/icon type" />
+    <link rel="stylesheet" href="/CSS/Master.css" />
+    <link rel="stylesheet" href="/CSS/ContactUs.css" />
     <title>SAMS Contact Us</title>
   </head>
   <body>
@@ -57,8 +57,8 @@
       </nav>
 
       <div class="icons">
-        <span><img src="../Images/Search.png" width="20px" alt="Search" /></span>
-        <span><img src="../Images/World.png" width="20px" alt="language" /></span>
+        <span><img src="/Images/Search.png" width="20px" alt="Search" /></span>
+        <span><img src="/Images/World.png" width="20px" alt="language" /></span>
       </div>
       <!-- Mobile Menu Toggle -->
       <div class="menu-toggle" id="mobile-menu">
@@ -136,12 +136,9 @@
         </details>
       </div>
     </div>
-<<<<<<< HEAD
     <script src="/Javascript/ContactUs.js"></script>
     <script src="/Javascript/responsive.js"></script>
-=======
-    <script src="../Javascript/ContactUs.js"></script>
->>>>>>> 511f8802702527a702f7842fedd163fa7968ab65
+    <script src="/Javascript/ContactUs.js"></script>
   </body>
   <footer>
     <div class="footer-content">
@@ -149,25 +146,6 @@
       <p class="Copy-Rights">
         &copy; 2025 SAMS By Visioneers. All Rights Reserved.
       </p>
-      <!-- <div class="links">
-          <div>
-            <h3>Products</h3>
-            <ul>
-              <li>SAMS-V1</li>
-              <li>SAMS-V2</li>
-            </ul>
-          </div>
-          <div>
-            <h3>Partners</h3>
-            <ul>
-              <li>Partner 1</li>
-              <li>Partner 2</li>
-            </ul>
-          </div>
-          <div>
-            <h3>Customer Stories</h3>
-          </div>
-        </div> -->
     </div>
     <div class="social-icons">
       <span><i class="fa-brands fa-square-facebook"></i></span>
