--- a/HTML/OurTeam.html
+++ b/HTML/OurTeam.html
@@ -27,13 +27,13 @@
       rel="stylesheet"
     />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="../CSS/all.min.css" />
+    <link rel="stylesheet" href="/CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="../Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/Bootstrap v5.0/css/bootstrap.min.css" />
     <!-- Stylesheets -->
-    <link rel="icon" href="../Images/Logo.png" type="image/icon type" />
-    <link rel="stylesheet" href="../CSS/Master.css" />
-    <link rel="stylesheet" href="../CSS/OurTeam.css" />
+    <link rel="icon" href="/Images/Logo.png" type="image/icon type" />
+    <link rel="stylesheet" href="/CSS/Master.css" />
+    <link rel="stylesheet" href="/CSS/OurTeam.css" />
     <title>SAMS - Contact Us</title>
   </head>
   <body>
@@ -50,8 +50,8 @@
       </nav>
 
       <div class="icons">
-        <span><img src="../Images/Search.png" width="20px" alt="Search" /></span>
-        <span><img src="../Images/World.png" width="20px" alt="language" /></span>
+        <span><img src="/Images/Search.png" width="20px" alt="Search" /></span>
+        <span><img src="/Images/World.png" width="20px" alt="language" /></span>
       </div>
       <!-- Mobile Menu Toggle -->
       <div class="menu-toggle" id="mobile-menu">
@@ -69,7 +69,7 @@
       <div class="team-grid">
         <!-- Team Member -->
         <div class="team-card">
-          <img src="../Images/Ahmed Adel.jpg" alt="Ahmed Adel Mahmoud" />
+          <img src="/Images/Ahmed Adel.jpg" alt="Ahmed Adel Mahmoud" />
           <h3>Ahmed Adel Mahmoud</h3>
           <p class="role">Web Developer<br />Embedded Systems</p>
           <div class="socials">
@@ -83,7 +83,7 @@
         </div>
 
         <div class="team-card">
-          <img src="../Images/Islam Elsayed.jpg" alt="Islam Elsayed Mohamed" />
+          <img src="/Images/Islam Elsayed.jpg" alt="Islam Elsayed Mohamed" />
           <h3>Islam Elsayed Mohamed</h3>
           <p class="role">Backend Developer</p>
           <div class="socials">
@@ -98,7 +98,7 @@
 
         <div class="team-card">
           <img
-            src="../Images/shehab mohamed.jpg"
+            src="/Images/shehab mohamed.jpg"
             alt="Shehab Mohamed Ghareeb"
           />
           <h3>Shehab Mohamed Ghareeb</h3>
@@ -115,7 +115,7 @@
 
         <div class="team-card">
           <img
-            src="../Images/yousef mostafa-cpy.jpg"
+            src="/Images/yousef mostafa-cpy.jpg"
             alt="Yousef Mostafa Ismail"
           />
           <h3>Yousef Mostafa Ismail</h3>
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="team-card">
-          <img src="../Images/Ahmed Ezzat.jpg" alt="Ahmed Ezzat Ibrahim" />
+          <img src="/Images/Ahmed Ezzat.jpg" alt="Ahmed Ezzat Ibrahim" />
           <h3>Ahmed Ezzat Ibrahim</h3>
           <p class="role">ML / DL</p>
           <div class="socials">
