--- a/HTML/Partners.html
+++ b/HTML/Partners.html
@@ -27,13 +27,13 @@
       rel="stylesheet"
     />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="../CSS/all.min.css" />
+    <link rel="stylesheet" href="/CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="../Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/Bootstrap v5.0/css/bootstrap.min.css" />
     <!-- Stylesheets -->
-    <link rel="icon" href="../Images/Logo.png" type="image/icon type" />
-    <link rel="stylesheet" href="../CSS/Master.css" />
-    <link rel="stylesheet" href="../CSS/Partners.css" />
+    <link rel="icon" href="/Images/Logo.png" type="image/icon type" />
+    <link rel="stylesheet" href="/CSS/Master.css" />
+    <link rel="stylesheet" href="/CSS/Partners.css" />
     <title>SAMS - Our Partners</title>
   </head>
   <body>
@@ -50,8 +50,8 @@
       </nav>
 
       <div class="icons">
-        <span><img src="../Images/Search.png" width="20px" alt="Search" /></span>
-        <span><img src="../Images/World.png" width="20px" alt="language" /></span>
+        <span><img src="/Images/Search.png" width="20px" alt="Search" /></span>
+        <span><img src="/Images/World.png" width="20px" alt="language" /></span>
       </div>
       <!-- Mobile Menu Toggle -->
       <div class="menu-toggle" id="mobile-menu">
@@ -70,16 +70,16 @@
       <div class="partner-grid">
         <!-- Partner logo cards -->
         <div class="partner-card">
-          <img src="../Images/unicef.jpg" alt="unicef" />
+          <img src="/Images/unicef.jpg" alt="unicef" />
         </div>
         <div class="partner-card">
-          <img src="../Images/save the children.jpg" alt="save the children" />
+          <img src="/Images/save the children.jpg" alt="save the children" />
         </div>
         <div class="partner-card">
-          <img src="../Images/IICRD.jpg" alt="IICRD" />
+          <img src="/Images/IICRD.jpg" alt="IICRD" />
         </div>
         <div class="partner-card">
-          <img src="../Images/ISPCAN.jpg" alt="ISPCAN" />
+          <img src="/Images/ISPCAN.jpg" alt="ISPCAN" />
         </div>
       </div>
     </div>
