--- a/HTML/Products.html
+++ b/HTML/Products.html
@@ -31,12 +31,12 @@
       rel="stylesheet"
     />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="../CSS/all.min.css" />
+    <link rel="stylesheet" href="/CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="../Bootstrap v5.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../CSS/Master.css" />
-    <link rel="stylesheet" href="../CSS/Products.css" />
-    <link rel="icon" href="../Images/Logo.png" type="image/icon type" />
+    <link rel="stylesheet" href="/Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/CSS/Master.css" />
+    <link rel="stylesheet" href="/CSS/Products.css" />
+    <link rel="icon" href="/Images/Logo.png" type="image/icon type" />
     <title>SAMS - Our Products</title>
   </head>
   <body>
@@ -72,7 +72,7 @@
       <div class="product-grid">
         <!-- Product 1 -->
         <div class="product-card">
-          <img src="../Images/Camera.jpeg" alt="Camera" />
+          <img src="/Images/Camera.jpeg" alt="Camera" />
           <div class="info">
             <h3>SAMS V1.0</h3>
             <p>
