--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       rel="stylesheet"
     />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="../CSS/all.min.css" />
+    <link rel="stylesheet" href="./CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="/Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./Bootstrap v5.0/css/bootstrap.min.css" />
     <title>Visioneers - SAMS</title>
-    <link rel="icon" href="/Images/Logo.png" type="image/icon type" />
-    <link rel="stylesheet" href="/CSS/Master.css" />
+    <link rel="icon" href="./Images/Logo.png" type="image/icon type" />
+    <link rel="stylesheet" href="./CSS/Master.css" />
   </head>
   <body>
     <header>
@@ -48,8 +48,8 @@
       </nav>
 
       <div class="icons">
-        <span><img src="/Images/Search.png" width="20px" alt="Search" /></span>
-        <span><img src="/Images/World.png" width="20px" alt="language" /></span>
+        <span><img src="./Images/Search.png" width="20px" alt="Search" /></span>
+        <span><img src="./Images/World.png" width="20px" alt="language" /></span>
       </div>
       <!-- Mobile Menu Toggle -->
       <div class="menu-toggle" id="mobile-menu">
@@ -68,7 +68,7 @@
           </p>
           <button>Get A Demo</button>
         </div>
-        <img src="/Images/Classroom.jpg" alt="Classroom security" />
+        <img src="./Images/Classroom.jpg" alt="Classroom security" />
       </section>
 
       <section class="stats">
@@ -84,7 +84,7 @@
       </section>
 
       <section class="whats-new-Card">
-        <img src="/Images/Camera.jpeg" alt="Security Camera" />
+        <img src="./Images/Camera.jpeg" alt="Security Camera" />
         <div class="text-content">
           <h2>Flexible, AI-Powered Software</h2>
           <p>
@@ -157,7 +157,7 @@
         <span><i class="fa-brands fa-linkedin"></i></span>
       </div>
     </footer>
-    <script src="/Javascript/Home.js"></script>
-    <script src="/Javascript/responsive.js"></script>
+    <script src="./Javascript/Home.js"></script>
+    <script src="./Javascript/responsive.js"></script>
   </body>
 </html>
