--- a/HTML/Products.html
+++ b/HTML/Products.html
@@ -41,15 +41,15 @@
   </head>
   <body>
     <header>
-      <a href="Index.html" style="text-decoration: none; color: inherit">
+      <a href="../Index.html" style="text-decoration: none; color: inherit">
         <div class="logo">SAMS</div>
       </a>
       <nav class="nav-links">
-        <a href="./Products.html">Products</a>
-        <a href="./CustomerStories.html">Customer Stories</a>
-        <a href="./Partners.html">Partners</a>
-        <a href="./OurTeam.html">Our Team</a>
-        <a href="./ContactUs.html">Contact us</a>
+        <a href="./HTML/Products.html">Products</a>
+        <a href="./HTML/CustomerStories.html">Customer Stories</a>
+        <a href="./HTML/Partners.html">Partners</a>
+        <a href="./HTML/OurTeam.html">Our Team</a>
+        <a href="./HTML/ContactUs.html">Contact us</a>
       </nav>
 
       <div class="icons">
