--- a/HTML/ContactUs.html
+++ b/HTML/ContactUs.html
@@ -27,9 +27,9 @@
       rel="stylesheet"
     />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="./CSS/all.min.css" />
+    <link rel="stylesheet" href="../CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="./Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../Bootstrap v5.0/css/bootstrap.min.css" />
     <!-- Leaflet CSS -->
     <link
       rel="stylesheet"
@@ -38,27 +38,27 @@
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <!-- Stylesheets -->
-    <link rel="icon" href="./Images/Logo.png" type="image/icon type" />
-    <link rel="stylesheet" href="./CSS/Master.css" />
-    <link rel="stylesheet" href="./CSS/ContactUs.css" />
+    <link rel="icon" href="../Images/Logo.png" type="image/icon type" />
+    <link rel="stylesheet" href="../CSS/Master.css" />
+    <link rel="stylesheet" href="../CSS/ContactUs.css" />
     <title>SAMS Contact Us</title>
   </head>
   <body>
     <header>
-      <a href="../Index.html" style="text-decoration: none; color: inherit">
+      <a href="../index.html" style="text-decoration: none; color: inherit">
         <div class="logo">SAMS</div>
       </a>
       <nav class="nav-links">
-        <a href="./HTML/Products.html">Products</a>
-        <a href="./HTML/CustomerStories.html">Customer Stories</a>
-        <a href="./HTML/Partners.html">Partners</a>
-        <a href="./HTML/OurTeam.html">Our Team</a>
-        <a href="./HTML/ContactUs.html">Contact us</a>
+        <a href="../HTML/Products.html">Products</a>
+        <a href="../HTML/CustomerStories.html">Customer Stories</a>
+        <a href="../HTML/Partners.html">Partners</a>
+        <a href="../HTML/OurTeam.html">Our Team</a>
+        <a href="../HTML/ContactUs.html">Contact us</a>
       </nav>
 
       <div class="icons">
-        <span><img src="./Images/Search.png" width="20px" alt="Search" /></span>
-        <span><img src="./Images/World.png" width="20px" alt="language" /></span>
+        <span><img src="../Images/Search.png" width="20px" alt="Search" /></span>
+        <span><img src="../Images/World.png" width="20px" alt="language" /></span>
       </div>
       <!-- Mobile Menu Toggle -->
       <div class="menu-toggle" id="mobile-menu">
@@ -136,9 +136,9 @@
         </details>
       </div>
     </div>
-    <script src="./Javascript/ContactUs.js"></script>
-    <script src="./Javascript/responsive.js"></script>
-    <script src="./Javascript/ContactUs.js"></script>
+    <script src="../Javascript/ContactUs.js"></script>
+    <script src="../Javascript/responsive.js"></script>
+    <script src="../Javascript/ContactUs.js"></script>
   </body>
   <footer>
     <div class="footer-content">
