--- a/HTML/CustomerStories.html
+++ b/HTML/CustomerStories.html
@@ -31,30 +31,30 @@
       rel="stylesheet"
     />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="./CSS/all.min.css" />
+    <link rel="stylesheet" href="../CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="./Bootstrap v5.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./CSS/Master.css" />
-    <link rel="stylesheet" href="./CSS/CustomerStories.css" />
+    <link rel="stylesheet" href="../Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../CSS/Master.css" />
+    <link rel="stylesheet" href="../CSS/CustomerStories.css" />
     <link rel="icon" href="./Images/Logo.png" type="image/icon type" />
     <title>SAMS - Customer Stories</title>
   </head>
   <body>
-     <header>
-      <a href="../Index.html" style="text-decoration: none; color: inherit">
+      <header>
+      <a href="../index.html" style="text-decoration: none; color: inherit">
         <div class="logo">SAMS</div>
       </a>
       <nav class="nav-links">
-        <a href="./HTML/Products.html">Products</a>
-        <a href="./HTML/CustomerStories.html">Customer Stories</a>
-        <a href="./HTML/Partners.html">Partners</a>
-        <a href="./HTML/OurTeam.html">Our Team</a>
-        <a href="./HTML/ContactUs.html">Contact us</a>
+        <a href="../HTML/Products.html">Products</a>
+        <a href="../HTML/CustomerStories.html">Customer Stories</a>
+        <a href="../HTML/Partners.html">Partners</a>
+        <a href="../HTML/OurTeam.html">Our Team</a>
+        <a href="../HTML/ContactUs.html">Contact us</a>
       </nav>
 
       <div class="icons">
-        <span><img src="./Images/Search.png" width="20px" alt="Search" /></span>
-        <span><img src="./Images/World.png" width="20px" alt="language" /></span>
+        <span><img src="../Images/Search.png" width="20px" alt="Search" /></span>
+        <span><img src="../Images/World.png" width="20px" alt="language" /></span>
       </div>
       <!-- Mobile Menu Toggle -->
       <div class="menu-toggle" id="mobile-menu">
@@ -72,7 +72,7 @@
       <div class="story-grid">
         <!-- Story 1 -->
         <div class="story-card">
-          <img src="./Images/World.png" alt="Client 1" />
+          <img src="../Images/World.png" alt="Client 1" />
           <div class="story-content">
             <h3>El Nour Inclusive School</h3>
             <p class="quote">
@@ -85,7 +85,7 @@
 
         <!-- Story 2 -->
         <div class="story-card">
-          <img src="./Images/World.png" alt="Client 2" />
+          <img src="../Images/World.png" alt="Client 2" />
           <div class="story-content">
             <h3>Cairo Future Academy</h3>
             <p class="quote">
@@ -98,7 +98,7 @@
 
         <!-- Story 3 -->
         <div class="story-card">
-          <img src="./Images/World.png" alt="Client 3" />
+          <img src="../Images/World.png" alt="Client 3" />
           <div class="story-content">
             <h3>Al Amal Hearing-Impaired School</h3>
             <p class="quote">
@@ -111,7 +111,7 @@
 
         <!-- Story 4 -->
         <div class="story-card">
-          <img src="./Images/World.png" alt="Client 4" />
+          <img src="../Images/World.png" alt="Client 4" />
           <div class="story-content">
             <h3>Tanta School for Developmentally Disabled</h3>
             <p class="quote">
@@ -124,7 +124,7 @@
 
         <!-- Story 5 -->
         <div class="story-card">
-          <img src="./Images/World.png" alt="Client 5" />
+          <img src="../Images/World.png" alt="Client 5" />
           <div class="story-content">
             <h3>Hope Center for Learning Difficulties</h3>
             <p class="quote">
@@ -137,7 +137,7 @@
 
         <!-- Story 6 -->
         <div class="story-card">
-          <img src="./Images/World.png" alt="Client 6" />
+          <img src="../Images/World.png" alt="Client 6" />
           <div class="story-content">
             <h3>Nile Delta Girls School</h3>
             <p class="quote">
@@ -162,6 +162,6 @@
         <span><i class="fa-brands fa-linkedin"></i></span>
       </div>
     </footer>
-        <script src="./Javascript/responsive.js"></script>
+        <script src="../Javascript/responsive.js"></script>
   </body>
 </html>
