--- a/HTML/Products.html
+++ b/HTML/Products.html
@@ -31,30 +31,30 @@
       rel="stylesheet"
     />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="./CSS/all.min.css" />
+    <link rel="stylesheet" href="../CSS/all.min.css" />
     <!-- Booststrap -->
-    <link rel="stylesheet" href="./Bootstrap v5.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./CSS/Master.css" />
-    <link rel="stylesheet" href="./CSS/Products.css" />
-    <link rel="icon" href="./Images/Logo.png" type="image/icon type" />
+    <link rel="stylesheet" href="../Bootstrap v5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../CSS/Master.css" />
+    <link rel="stylesheet" href="../CSS/Products.css" />
+    <link rel="icon" href="../Images/Logo.png" type="image/icon type" />
     <title>SAMS - Our Products</title>
   </head>
   <body>
     <header>
-      <a href="../Index.html" style="text-decoration: none; color: inherit">
+      <a href="../index.html" style="text-decoration: none; color: inherit">
         <div class="logo">SAMS</div>
       </a>
       <nav class="nav-links">
-        <a href="./HTML/Products.html">Products</a>
-        <a href="./HTML/CustomerStories.html">Customer Stories</a>
-        <a href="./HTML/Partners.html">Partners</a>
-        <a href="./HTML/OurTeam.html">Our Team</a>
-        <a href="./HTML/ContactUs.html">Contact us</a>
+        <a href="../HTML/Products.html">Products</a>
+        <a href="../HTML/CustomerStories.html">Customer Stories</a>
+        <a href="../HTML/Partners.html">Partners</a>
+        <a href="../HTML/OurTeam.html">Our Team</a>
+        <a href="../HTML/ContactUs.html">Contact us</a>
       </nav>
 
       <div class="icons">
-        <span><img src="./Images/Search.png" width="20px" alt="Search" /></span>
-        <span><img src="./Images/World.png" width="20px" alt="language" /></span>
+        <span><img src="../Images/Search.png" width="20px" alt="Search" /></span>
+        <span><img src="../Images/World.png" width="20px" alt="language" /></span>
       </div>
       <!-- Mobile Menu Toggle -->
       <div class="menu-toggle" id="mobile-menu">
@@ -72,7 +72,7 @@
       <div class="product-grid">
         <!-- Product 1 -->
         <div class="product-card">
-          <img src="./Images/Camera.jpeg" alt="Camera" />
+          <img src="../Images/Camera.jpeg" alt="Camera" />
           <div class="info">
             <h3>SAMS V1.0</h3>
             <p>
@@ -101,6 +101,6 @@
         <span><i class="fa-brands fa-linkedin"></i></span>
       </div>
     </footer>
-    <script src="./Javascript/responsive.js"></script>
+    <script src="../Javascript/responsive.js"></script>
   </body>
 </html>
