--- a/HTML/OurTeam.html
+++ b/HTML/OurTeam.html
@@ -115,7 +115,7 @@
 
         <div class="team-card">
           <img
-            src=".ز/Images/yousef mostafa-cpy.jpg"
+            src="../Images/yousef mostafa-cpy.jpg"
             alt="Yousef Mostafa Ismail"
           />
           <h3>Yousef Mostafa Ismail</h3>
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="team-card">
-          <img src="ز./Images/Ahmed Ezzat.jpg" alt="Ahmed Ezzat Ibrahim" />
+          <img src="../Images/Ahmed Ezzat.jpg" alt="Ahmed Ezzat Ibrahim" />
           <h3>Ahmed Ezzat Ibrahim</h3>
           <p class="role">ML / DL</p>
           <div class="socials">
@@ -153,6 +153,6 @@
         <span><i class="fa-brands fa-linkedin"></i></span>
       </div>
     </footer>
-    <script src=".ز/Javascript/responsive.js"></script>
+    <script src="../Javascript/responsive.js"></script>
   </body>
 </html>
