--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <header>
-      <a href="../" style="text-decoration: none; color: inherit">
+      <a href="" style="text-decoration: none; color: inherit">
         <div class="logo">SAMS</div>
       </a>
       <nav class="nav-links">
